# aprendizaje_automatico

./: README.md  aprendiendo_machin.yml
aprendiendo-machin/: Makefile  README.md  pyproject.toml
aprendiendo-machin/aprendiendo_machin/: __init__.py  dataset.py  features.py  plots.py
aprendiendo-machin/aprendiendo_machin/modeling/: predict.py  train.py
aprendiendo-machin/docs/: mkdocs.yml
aprendiendo-machin/docs/docs/: index.md
aprendiendo-machin/models/: LinearRegression.py
aprendiendo-machin/notebooks/: 1.bima_linear_regression.ipynb  10.bima_confusion_matrix.ipynb  10.bima_svhn_project.ipynb  2.bima_normal_equation.ipynb  3.bima_svhn_1_feature.ipynb  4.bima_ridge_lasso_regression homework.ipynb  4.bima_ridge_lasso_regression.ipynb  5.bima_examen_1.ipynb  6.bima_bpu_comparison_bubble_sort.ipynb  7.bima_gridsearch_cv.ipynb  8.bima_mnist_pca.ipynb  project.svhn.ipynb  proyect_gpu.py
aprendiendo-machin/reports/avance_proyecto/: avance_proyecto.tex  references.bib
aprendiendo-machin/reports/tarea1/: reporte.tex
